# Slackinator

./: README.rm  Slackinator.pro  curlpp.cpp  echoclient.cpp  echoclient.h  instantresponse.cpp  instantresponse.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  roadmap.cpp  roadmap.h  utils.h
curlpp/: CMakeLists.txt
curlpp/include/: curlpp.h
curlpp/src/: CMakeLists.txt  curlpp.cpp
slackinator/: CMakeLists.txt
slackinator/include/: instantresponse.h  roadmap.h
slackinator/src/: CMakeLists.txt  roadmap.cpp  utils.cpp
